# docs/swagger.yaml
@@ -23,6 +23,21 @@ definitions:
       old_password:
         type: string
     type: object
+  models.StudentRegisterRequest:
+    properties:
+      email:
+        type: string
+      fullname:
+        type: string
+      nisn:
+        type: string
+      password:
+        type: string
+      school:
+        type: string
+      username:
+        type: string
+    type: object
   schemas.AddStudentRequest:
     properties:
       email:
@@ -856,6 +871,36 @@ paths:
       tags:
       - Recommendations
       - Admin
+  /register/student:
+    post:
+      consumes:
+      - application/json
+      description: Register student
+      parameters:
+      - description: Register student request body
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/models.StudentRegisterRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/httpx.MessageJsonResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/httpx.ErrorJsonResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/httpx.ErrorJsonResponse'
+      summary: Register student
+      tags:
+      - Student
   /school:
     get:
       consumes:
@@ -893,6 +938,36 @@ paths:
       - Common
       - Student
       - Admin
+  /schools:
+    get:
+      consumes:
+      - application/json
+      description: Get all registered schools
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/httpx.DataJsonResponse'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/schemas.School'
+                  type: array
+              type: object
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/httpx.ErrorJsonResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/httpx.ErrorJsonResponse'
+      summary: Get all schools
+      tags:
+      - Common
   /statistics:
     get:
       consumes:
